# seven-segment-display

./: .gitignore  CMakeLists.txt  LICENSE  README.md  cnn.cpp  main.cpp  main2.cpp  main3.cpp  recognize.cpp  test.cpp  test.h
Include/: DigtalLocate.cpp  DigtalLocate.h  Histogram1D.cpp  Histogram1D.h  LBP.CPP  LBP.h  SVMtest.cpp  TextDetection.cpp  TextDetection.h  WatershedSegmenter.hpp  output_server.cpp  output_server.h  svmtest.h  tool.cpp  tool.h  web_interface.cpp  web_interface.h  widget.cpp  widget.h
datasource/: remove.py  rename.py
datasource/log/: ndata_0.txt  ndata_1.txt  ndata_10.txt  ndata_11.txt  ndata_12.txt  ndata_13.txt  ndata_14.txt  ndata_15.txt  ndata_16.txt  ndata_17.txt  ndata_18.txt  ndata_19.txt  ndata_2.txt  ndata_20.txt  ndata_21.txt  ndata_22.txt  ndata_23.txt  ndata_24.txt  ndata_25.txt  ndata_26.txt  ndata_27.txt  ndata_28.txt  ndata_29.txt  ndata_3.txt  ndata_4.txt  ndata_5.txt  ndata_6.txt  ndata_7.txt  ndata_8.txt  ndata_9.txt
datasource/logfile/: .json  ndata_0.json  ndata_1.json  ndata_10.json  ndata_11.json  ndata_12.json  ndata_13.json  ndata_14.json  ndata_15.json  ndata_16.json  ndata_17.json  ndata_18.json  ndata_19.json  ndata_2.json  ndata_20.json  ndata_21.json  ndata_22.json  ndata_23.json  ndata_24.json  ndata_25.json  ndata_26.json  ndata_27.json  ndata_28.json  ndata_29.json  ndata_3.json  ndata_4.json  ndata_5.json  ndata_6.json  ndata_7.json  ndata_8.json  ndata_9.json
datasource/test_correct/: 手动矫正角度.txt  根正.xlsx
matlab/re/: test.m
matlab/rodon/: a.txt  test.m  test.m~
python-svm/: log.py  main2.py  man.py  outp.txt  outt.txt  outtest.txt  roctest.py  te.py
resources/: genarate_res.py  resources.qrc
resources/UI/: hello_world.html  starter.html
resources/UI/python/: t
resources/main/: starter.html
resources/test/: default.html
svm-model/: b.xml  digtal_binary.xml
test/: CMakeLists.txt  main.cpp
